--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -1,9 +1,10 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <a id="fullscreen-button" href="#fullscreen" hidden="">⤢</a> <a id="regular-layout" hidden="">⇲</a> <small><a id="save">Save</a></small></h1>
 	<div id="row" class="row">
-		<div class="ta-cont">
-			<textarea id="code" autofocus="">$code</textarea>
-			<code id="code-display" data-language="javascript"></code>
+		<div id="ta-cont">
+			<textarea id="code" autofocus="" autocapitalize="none" autocomplete="off" spellcheck="false">$code</textarea>
+			<code id="code-display"></code>
+			<span class="cursor"></span>
 		</div>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
@@ -54,59 +55,74 @@
 		display: inline-block;
 		margin-left: 8px;
 	}
-	.ta-cont, #output { width: 95% }
+	#ta-cont, #output { width: 95% }
 	#main { height: 500px }
 	#row { height: calc(100% - 2rem - 2px) }
-	.ta-cont {
+	#ta-cont {
 		margin-bottom: 8px;
 		position: relative;
+		overflow: auto;
+		border: 1px solid #fff;
 	}
-	.ta-cont > * {
-		position: absolute;
-		top: 0; left: 0;
-		width: 100%; height: 100%;
-		margin: 0;
-		padding: 2px;
+	#code, #code-display {
+		display: block;
+		width: calc(100% - 1.2em); min-height: 100%;
+		padding: 0;
+		margin: 2px;
 		color: #fff;
 		background: transparent;
 		font-family: monospace;
 		white-space: pre-wrap;
-		overflow: auto;
+		word-wrap: break-word;
+		overflow-wrap: break-word;
 		font-size: 1rem;
 		line-height: 1.2;
-		border: 1px solid #fff;
 		resize: none;
+		outline: none;
+		border: none;
+		border-left: 1px solid #444;
+		padding-left: 4px;
 	}
-	.ta-cont code { pointer-events: none }
-	.ta-cont, #output { height: calc(50% - 4px) }
+	#code {
+		position: absolute;
+		top: 0;
+		z-index: 1;
+		color: transparent;
+	}
+	#cursor {
+		display: inline-block;
+		background: #fff;
+		position: absolute;
+	}
+	#ta-cont, #output { height: calc(50% - 4px) }
 	@media (min-width: 600px) {
 		h1 {
 			height: 1.65rem;
 			margin-bottom: .35em;
 		}
-		.ta-cont, #output { height: 100% }
-		.ta-cont { width: 60% }
+		#ta-cont, #output { height: 100% }
+		#ta-cont { width: 60% }
 		#output {
 			width: 39%;
 			float: right;
 		}
-		.fullscreen .ta-cont:not(:focus) { width: 39% }
-		.fullscreen .ta-cont:not(:focus) + #output { width: 60% }
+		.fullscreen #ta-cont:not(:focus) { width: 39% }
+		.fullscreen #ta-cont:not(:focus) + #output { width: 60% }
 	}
 	@media (min-width: 600px) and (max-width: 800px) {
-		.ta-cont { width: 55% }
+		#ta-cont { width: 55% }
 		#output { width: 44% }
-		.fullscreen .ta-cont:not(:focus) { width: 44% }
-		.fullscreen .ta-cont:not(:focus) + #output { width: 55% }
+		.fullscreen #ta-cont:not(:focus) { width: 44% }
+		.fullscreen #ta-cont:not(:focus) + #output { width: 55% }
 	}
 	@media (min-width: 1500px) {
-		.ta-cont { margin-bottom: 0 }
+		#ta-cont { margin-bottom: 0 }
 	}
 	@media (min-width: 1600px) {
-		.ta-cont { width: 65% }
+		#ta-cont { width: 65% }
 		#output { width: 34% }
-		.fullscreen .ta-cont:not(:focus) { width: 34% }
-		.fullscreen .ta-cont:not(:focus) + #output { width: 65% }
+		.fullscreen #ta-cont:not(:focus) { width: 34% }
+		.fullscreen #ta-cont:not(:focus) + #output { width: 65% }
 	}
 	.fullscreen #main #output.fullscreen {
 		position: fixed;
@@ -219,6 +235,7 @@
 		.fullscreen #content { margin: 6px 0 6px 46px }
 	}
 	code .line::before {
+		left: 0;
 		content: attr(data-linenum);
 		color: #aaa;
 		display: inline-block;
@@ -227,46 +244,42 @@
 		user-select: none;
 		padding: 0 2px 0 4px;
 		position: absolute;
-		left: 0;
 	}
-	code .line::before {
-		content: attr(data-linenum);
-		color: #aaa;
-		display: inline-block;
-		-webkit-user-select: none;
-		-moz-user-select: none;
-		user-select: none;
-		padding: 0 2px 0 4px;
-		position: absolute;
-		left: 0;
-	}
-	.line-dig0 { padding-left: 1.4em }
-	.line-dig1 { padding-left: 2em }
-	.line-dig2 { padding-left: 2.6em }
-	.line-dig3 { padding-left: 3.2em }
-	.line-dig4 { padding-left: 3.8em }
-	.line-dig5 { padding-left: 4.4em }
-	.line-dig6 { padding-left: 5em }
-	.line-dig7 { padding-left: 5.6em }
-
-	code .comment { color: #777 }
+	#ta-cont.line-dig0 { padding-left: 0.8em }
+	#ta-cont.line-dig1 { padding-left: 1.4em }
+	#ta-cont.line-dig2 { padding-left: 2em }
+	#ta-cont.line-dig3 { padding-left: 2.6em }
+	#ta-cont.line-dig4 { padding-left: 3.2em }
+	#ta-cont.line-dig5 { padding-left: 3.8em }
+	#ta-cont.line-dig6 { padding-left: 4.4em }
+	#ta-cont.line-dig7 { padding-left: 5em }
+	code .inline-comment { color: #888 }
 	code .keyword { color: #fd3 }
 	code .constant, code .string .escape { color: #df0 }
 	code .string { color: #6C3 }
 	code .regex { color: #ffa }
-	code .operator.assigns { color: #8ff; }
-	code .regex.open, code .regex.close, code .regex.modifier, code .operator { color: #ff0 }
+	code .regex .open, code .regex .close, code .regex .modifier { color: #ff0 }
 	code .regex .escape { color: #afa }
-	code .regex.modifier { font-weight: bold }
-	code .arguments, code .number { color: #3df }
+	code .regex .backreference { color: #0f0 }
+	code .regex .special { color: #faa }
+	code .regex .grouper { color: #fff }
+	code .regex .charclass { color: #ffd }
+	code .regex .charclass { background: #730 }
+	code .regex .charclass .range { color: #fed }
+	code .regex .charclass .punctuation { color: #f90 }
+	code .regex .quantifier { color: #2af }
+	code .regex .quantifier .punctuation { color: #8cf }
+	code .regex .modifier { font-weight: bold }
+	code .operator { color: #ff8 }
+	code .operator.assigns, code .equals { color: #8ff }
+	code .argument, code .number { color: #3df }
 	code .newvar { font-weight: bold }
-	code .function { color: #f60 }
-	code .function.call { color: #f90 }
+	code .function-name { color: #f60 }
+	code .function-call { color: #f90 }
 	code .prototype { color: #f00 }
-	code .punctuation, code .grouper { color: #ccc }
-	code .browser { color: #9ac }
-	code .browser.method { color: #9bf }
-	code .browser.property { color: #acf }
+	code .punctuation, code .dot { color: #ddd }
+	code .capvar { color: #9ac }
+	code .browser { color: #9bd }
 </style>
 <script>
 	var mine = $mine,
