--- a/http/rainbowtest.html
+++ b/http/rainbowtest.html
@@ -1,97 +1,280 @@
 <!DOCTYPE html>
-<title>Syntax Highlighting</title>
-<script>
-	'use strict';
+<html>
+	<head>
+		<title>Syntax Highlighting</title>
+		<script>
+			'use strict';
+			function html(input, replaceQuoteOff) {
+				if (replaceQuoteOff) return input.toString().replaceAll(['&', '<'], ['&amp;', '&lt;']);
+				return input.toString().replaceAll(['&', '<', '"'], ['&amp;', '&lt;', '&quot;']);
+			}
+			function highlight(input) {
+				var output = '',
+					string = false,
+					lineComment = false,
+					multilineComment = false,
+					capVar = false,
+					warnings = [],
+					beforeWord;
+				for (var i = 0; i < input.length; i++) {
+					var c = input[i];
+					if (lineComment) {
+						if (c == '\n') {
+							lineComment = false;
+							output += '</span>';
+						}
+						output += html(c);
+					} else if (multilineComment) {
+						output += html(c);
+						if (c == '/' && input[i - 1] == '*') {
+							multilineComment = false;
+							output += '</span>';
+						}
+					} else if (c === string) {
+						string = false;
+						output += c + '</span>';
+					} else if (string && c == '\n') {
+						warnings.push([i, 'Unexpected line end, string literal not terminated.']);
+						string = false;
+						output += '</span>\n';
+					} else if (string) {
+						if (c == '\\') output += '<span class="escape">';
+						output += html(c);
+						if (c == '\\') {
+							output += html(c = input[++i]);
+							if (c == 'u') {
+								output += html(c = input[++i]);
+								if (c == '{') {
+									while ((c = input[++i]) && c != '}') {
+										if (c == '\n' || c == string) {
+											warnings.push([i, 'Unclosed bracket escape sequence.']);
+											break;
+										}
+										output += html(c);
+									}
+									output += '}';
+								} else output += html(input[++i] + input[++i] + input[++i]);
+							} else if (c == 'x') output += html(input[++i] + input[++i]);
+							output += '</span>';
+						}
+					} else if (c == '"' || c == "'") {
+						string = c;
+						output += '<span class="string">' + c;
+					} else if (c == '/' && input[i + 1] == '/') {
+						lineComment = true;
+						output += '<span class="inline-comment">//';
+						i++;
+					} else if (c == '/' && input[i + 1] == '*') {
+						multilineComment = true;
+						output += '<span class="inline-comment">/*';
+						i++;
+					} else if (c != c.toLowerCase() && (input[i - 1] || ' ').match(/\W/)) {
+						capVar = true;
+						output += '<span class="cap-var">' + html(c);
+					} else if (capVar && c.match(/\W/)) {
+						capVar = false;
+						output += '</span>';
+						i--;
+					} else if (input.substr(i, 9) == 'prototype') {
+						output += '<span class="prototype">prototype</span>';
+						i += 8;
+					} else if ((beforeWord = !(input[i - 1] || '').match(/\w/)) && !(input[i + 2] || '').match(/\w/) && ['do', 'if', 'in'].indexOf(input.substr(i, 2)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 2) + '</span>';
+						i++;
+					} else if (beforeWord && !(input[i + 3] || '').match(/\w/) && ['for', 'let', 'new', 'try', 'var'].indexOf(input.substr(i, 3)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 3) + '</span>';
+						i += 2;
+					} else if (beforeWord && !(input[i + 4] || '').match(/\w/) && ['case', 'else', 'this', 'void', 'with'].indexOf(input.substr(i, 4)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 4) + '</span>';
+						i += 3;
+					} else if (beforeWord && !(input[i + 5] || '').match(/\w/) && ['break', 'class', 'catch', 'const', 'super', 'throw', 'while', 'yield'].indexOf(input.substr(i, 5)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 5) + '</span>';
+						i += 4;
+					} else if (beforeWord && !(input[i + 6] || '').match(/\w/) && ['delete', 'export', 'import', 'return', 'switch', 'typeof'].indexOf(input.substr(i, 6)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 6) + '</span>';
+						i += 5;
+					} else if (beforeWord && !(input[i + 7] || '').match(/\w/) && ['default', 'finally'].indexOf(input.substr(i, 7)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 7) + '</span>';
+						i += 6;
+					} else if (beforeWord && !(input[i + 8] || '').match(/\w/) && ['continue', 'debugger'].indexOf(input.substr(i, 8)) != -1) {
+						output += '<span class="keyword">' + input.substr(i, 8) + '</span>';
+						i += 7;
+					} else if (beforeWord && !(input[i + 10] || '').match(/\w/) && input.substr(i, 10) == 'instanceof') {
+						output += '<span class="keyword">' + input.substr(i, 10) + '</span>';
+						i += 9;
+					} else if (input.substr(i, 8) == 'function') {
+						var l = c,
+							end = i,
+							start,
+							sanitizedOutput = output.replaceAll('<span class=', '<span-class-');
+						while (l = input[--end]) {
+							if (l == '=') {
+								end += output.length - i - '<span class="operator assigns"></span>'.length - 1;
+								while (sanitizedOutput[end].match(/\s/)) end--;
+								start = end;
+								end++;
+								while (start && !sanitizedOutput[start].match(/[\s=(]/)) start--;
+								output = output.substring(0, start) + '<span class="function-name">' + output.substring(start, end) + '</span>' + output.substr(end);
+								break;
+							} else if (!l.match(/\s/)) break;
+						}
+						output += '<span class="keyword">function</span>';
+						i += 6;
+						var stop = ++i + input.substr(i).indexOf('(');
+						if (!stop) {
+							warnings.push([i, 'Function arguments not found.']);
+							continue;
+						}
+						if ((c = input[++i]).match(/\s/)) {
+							output += html(c) + '<span class="function-name">';
+							while ((c = input[++i]) && c != '(') output += html(c);
+							output += '</span>';
+						}
+						while (i < stop) output += input[++i];
+						output += '<span class="punctuation">(</span>';
+						var argString = '';
+						while ((c = input[++i]) && c != ')') argString += c;
+						output += argString.replace(/[^\s,]+/g, '<span class="argument">$&</span>').replaceAll(',', '<span class="punctuation">,</span>') + '<span class="punctuation">)</span>';
+					} else if (c == '(') {
+						var start = output.length,
+							functionName = '',
+							sanitizedOutput = output.replaceAll('<span class=', '<span-class-');
+						while (!sanitizedOutput[--start].match(/[([{.\s]/)) functionName = output[start] + functionName;
+						if (functionName.indexOf('</span>') == 0) {
+							start += 7;
+							functionName = functionName.substr(7);
+						}
+						output = output.substr(0, ++start) + '<span class="function-call">' + functionName + '</span><span class="punctuation">(</span>';
+					} else if (',.;)[]{}'.indexOf(c) != -1) {
+						output += '<span class="punctuation">' + c + '</span>';
+					} else if (input.substr(i, 2) == '++' || input.substr(i, 2) == '--') {
+						output += '<span class="operator assigns">' + c + input[++i] + '</span>';
+					} else if (['*=', '/=', '%=', '+=', '-=', '&=', '|=', '^='].indexOf(input.substr(i, 2)) != -1) {
+						output += '<span class="operator assigns">' + html(c) + '=</span>';
+						i++;
+					} else if (['<<=', '>>='].indexOf(input.substr(i, 3)) != -1) {
+						output += '<span class="operator assigns">' + html(c + input[++i]) + '=</span>';
+						i++;
+					} else if (input.substr(i, 4) == '>>>=') {
+						output += '<span class="operator assigns">>>>=</span>';
+						i += 3;
+					} else if (input.substr(i, 3) == '>>>') {
+						output += '<span class="operator">' + html(input.substr(i, 3)) + '</span>';
+						i += 2;
+					} else if (['<=', '>=', '==', '!=', '===', '!==', '<<', '>>', '&&', '||'].indexOf(input.substr(i, 2)) != -1) {
+						output += '<span class="operator">' + html(c + input[++i]) + '</span>';
+					} else if ('+-~!*/%<>&|^?:'.indexOf(c) != -1) {
+						output += '<span class="operator">' + html(c) + '</span>';
+					} else if (c == '=') {
+						output += '<span class="operator assigns">=</span>';
+					} else if (beforeWord && c.match(/\d/)) {
+						var start = i;
+						if (c == '0' && (c = input[++i])) {
+							if (c.toLowerCase() == 'b') {
+								while ('01'.indexOf(input[++i]) != -1);
+							} else if (c.toLowerCase() == 'o') {
+								while ('01234567'.indexOf(input[++i]) != -1);
+							} else if (c.toLowerCase() == 'x') {
+								while ('0123456789abcdefABCDEF'.indexOf(input[++i]) != -1);
+							} else if (c.match(/[\d\w]/)) warnings.push([i, 'Bad number literal.']);
+							output += '<span class="number">' + input.substring(start, i--) + '</span>';
+						} else {
+							while ('0123456789.'.indexOf(input[i]) != -1) i++;
+							if ((input[i] || '').toLowerCase() == 'e') {
+								if ('+-'.indexOf(input[i])) i++;
+								if ('0123456789'.indexOf(input[i]) == -1) warnings.push([i, 'No exponent found after "e".']);
+								else i++;
+								while ('0123456789.'.indexOf(input[i]) != -1) i++;
+							}
+							output += '<span class="number">' + input.substring(start, i) + '</span>';
+							i--;
+						}
+					} else output += c;
+				}
+				console.log(output);
+				console.log(warnings);
+				return output.split('\n');
+			}
+			addEventListener('DOMContentLoaded', function() {
+				var blocks = document.getElementsByTagName('code');
+				var before = new Date().getTime();
+				for (var i = 0; i < blocks.length; i++) {
+					var block = blocks[i],
+						code = highlight(block.textContent);
+					block.classList.add('line-dig' + Math.floor(Math.log10(code.length)));
+					block.innerHTML = code.map(function(line, i) {
+						return '<span class="line" data-linenum="' + (i + 1) + '"></span>' + line;
+					}).join('\n');
+				}
+				console.log(new Date().getTime() - before);
+			});
+		</script>
+		<style>
+			body {
+				background: #000;
+				tab-size: 4;
+			}
 
-	String.prototype.replaceAll = function(find, replace) {
-		if (typeof find == 'string') return this.split(find).join(replace);
-		var t = this, i, j;
-		while (typeof(i = find.shift()) == 'string' && typeof(j = replace.shift()) == 'string') t = t.replaceAll(i || '', j || '');
-		return t;
-	};
-	String.prototype.repeat = function(num) {
-		return new Array(++num).join(this);
-	};
-	Number.prototype.bound = function(l, h) {
-		return isNaN(h) ? Math.min(this, l) : Math.max(Math.min(this, h), l);
-	};
-	HTMLCollection.prototype.indexOf = NodeList.prototype.indexOf = Array.prototype.indexOf;
-	HTMLCollection.prototype.forEach = NodeList.prototype.forEach = Array.prototype.forEach;
-	HTMLElement.prototype.insertAfter = function(newEl, refEl) {
-		if (refEl.nextSibling) refEl.parentNode.insertBefore(newEl, refEl.nextSibling);
-		else refEl.parentNode.appendChild(newEl);
-	};
+			code.blk {
+				display: block;
+				background: #000;
+				border: 1px solid #fff;
+				color: #fff;
+				padding: 4px;
+				padding-left: 1.4em;
+				white-space: pre-wrap;
+				max-height: 600px;
+				max-width: 100%;
+				overflow: auto;
+				word-break: normal;
+				hyphens: none;
+				-webkit-hyphens: none;
+				position: relative;
+				margin: 8px 0;
+			}
+			code .line::before {
+				content: attr(data-linenum);
+				color: #aaa;
+				display: inline-block;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				user-select: none;
+				padding: 0 2px 0 4px;
+				position: absolute;
+				left: 0;
+			}
+			code.line-dig1 { padding-left: 2em }
+			code.line-dig2 { padding-left: 2.6em }
+			code.line-dig3 { padding-left: 3.2em }
+			code.line-dig4 { padding-left: 3.8em }
+			code.line-dig5 { padding-left: 4.4em }
+			code.line-dig6 { padding-left: 5em }
+			code.line-dig7 { padding-left: 5.6em }
 
-	function html(input, replaceQuoteOff) {
-		if (replaceQuoteOff) return input.toString().replaceAll(['&', '<'], ['&amp;', '&lt;']);
-		return input.toString().replaceAll(['&', '<', '"'], ['&amp;', '&lt;', '&quot;']);
-	}
-</script>
-<style>
-body {
-	background: #000;
-	tab-size: 4;
-}
-
-code.blk {
-	display: block;
-	background: #000;
-	border: 1px solid #fff;
-	color: #fff;
-	padding: 4px;
-	padding-left: 1.4em;
-	white-space: pre-wrap;
-	max-height: 600px;
-	max-width: 100%;
-	overflow: auto;
-	word-break: normal;
-	hyphens: none;
-	-webkit-hyphens: none;
-	position: relative;
-	margin: 8px 0;
-}
-code .line::before {
-	content: attr(data-linenum);
-	color: #aaa;
-	display: inline-block;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	padding: 0 2px 0 4px;
-	position: absolute;
-	left: 0;
-}
-code.line-dig1 { padding-left: 2em }
-code.line-dig2 { padding-left: 2.6em }
-code.line-dig3 { padding-left: 3.2em }
-code.line-dig4 { padding-left: 3.8em }
-code.line-dig5 { padding-left: 4.4em }
-code.line-dig6 { padding-left: 5em }
-code.line-dig7 { padding-left: 5.6em }
-
-code .comment { color: #777 }
-code .keyword { color: #fd3 }
-code .constant, code .string .escape { color: #df0 }
-code .string { color: #6C3 }
-code .regex { color: #ffa }
-code .operator.assigns { color: #8ff; }
-code .regex.open, code .regex.close, code .regex.modifier, code .operator { color: #ff0 }
-code .regex .escape { color: #afa }
-code .regex.modifier { font-weight: bold }
-code .arguments, code .number { color: #3df }
-code .newvar { font-weight: bold }
-code .function { color: #f60 }
-code .function.call { color: #f90 }
-code .prototype { color: #f00 }
-code .punctuation, code .grouper { color: #ccc }
-code .browser { color: #9ac }
-code .browser.method { color: #9bf }
-code .browser.property { color: #acf }
-</style>
+			code .inline-comment { color: #777 }
+			code .keyword { color: #fd3 }
+			code .constant, code .string .escape { color: #df0 }
+			code .string { color: #6C3 }
+			code .regex { color: #ffa }
+			code .regex.open, code .regex.close, code .regex.modifier, code .operator { color: #ff8 }
+			code .operator.assigns { color: #8ff }
+			code .regex .escape { color: #afa }
+			code .regex.modifier { font-weight: bold }
+			code .argument, code .number { color: #3df }
+			code .newvar { font-weight: bold }
+			code .function-name { color: #f60 }
+			code .function-call { color: #f90 }
+			code .prototype { color: #f00 }
+			code .punctuation, code .grouper { color: #ccc }
+			code .cap-var { color: #9ac }
+			code .browser { color: #9ac }
+			code .browser.method { color: #9bf }
+			code .browser.property { color: #acf }
+		</style>
+	</head>
 <body>
-<code class="blk" data-language="javascript">'use strict';
-
-String.prototype.replaceAll = function(find, replace) {
+<code class="blk" data-language="javascript">1,5e;;;0;;;</code>
+<code class="blk" data-language="javascript">String.prototype.replaceAll = function(find, replace) {
 	if (typeof find == 'string') return this.split(find).join(replace);
 	var t = this, i, j;
 	while (typeof(i = find.shift()) == 'string' &amp;&amp; typeof(j = replace.shift()) == 'string') t = t.replaceAll(i || '', j || '');
@@ -535,5 +718,5 @@ document.addEventListener('visibilitychange', function() {
 });
 
 if (navigator.userAgent.indexOf('Mobile') != -1) addEventListener('touchend', function() {}); //Fixes mobile-safari bug with touch listeners in iframes not firing</code>
-	<script src="/a/rainbow.js"></script>
 </body>
+</html>
