Fix chat search room replacement & input width

--- a/html/chat/search.html
+++ b/html/chat/search.html
@@ -15,7 +15,7 @@
 <div id="results" class="umar"></div>
 <style>
 	#searchbox {
-		width: calc(100% - 3em);
+		width: 100%;
 		font-size: 1em;
 	}
 	#roomlist {
