Remove dev files, clean up

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -296,6 +296,8 @@
 <script>
 	var mine = $mine,
 		id = $id,
+		opName = '$op-name',
+		myRep = $rep,
 		footerOff = true,
 		noPageOverflow = 400,
 		pageOverflowMobile = true,
