Show highlight warnings

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -249,6 +249,10 @@
 		padding: 0 2px 0 4px;
 		position: absolute;
 	}
+	code .line.warning::before {
+		color: #ff6;
+		font-weight: bold;
+	}
 	#ta-cont.line-dig0 { padding-left: 0.8em }
 	#ta-cont.line-dig1 { padding-left: 1.4em }
 	#ta-cont.line-dig2 { padding-left: 2em }
