--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -1,4 +1,4 @@
-<h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" style="font-size: 0.8em; width: 100%;" hidden="" /></h1>
+<h1><span id="title">$lang: $title</span><input id="title-edit" value="$title" hidden="" /></h1>
 <span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span>
 <div class="pad vote lft">
 	<svg id="mup" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg>
@@ -44,31 +44,27 @@
 	<a id="addcomment" href="#comment" style="font-weight: normal;" class="small">Add comment</a>
 </div>
 <hr class="nomar bumar" />
-<!-- <h2 class="sumar">1 Answer</h2>
-<div id="answers"><div class="row"><div class="pad vote"><a href="javascript:answer.up('30')"><svg id="aup-30" class="blk up" xmlns="http://www.w3.org/2000/svg"><polygon points="10,1 1,19 19,19" /></svg></a><a href="javascript:answer.dn('30')"><svg id="adn-30" class="blk dn" xmlns="http://www.w3.org/2000/svg"><polygon points="10,19 1,1 19,1" /></svg></a><a href="javascript:answer.fl('30')"><svg id="afl-30" class="blk fl" xmlns="http://www.w3.org/2000/svg"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a></div><div style="float: none; margin-left: 32px;"><div class="answer umar pad hglt br clearfix" id="30">
-This text will be replaced
-</div>
-<form id="edit-30" action="javascript:answer.editSubmit(30,1)" hidden=""><textarea id="edit-ta-30" class="a-edit"></textarea><button type="submit">Submit Edit</button> <button type="button" onclick="answer.editSubmit(30)">Cancel</button></form></div></div></div>
+$answers
 <h2 class="bumar">Answer this question</h2>
-<form id="answer" class="umar rel" action="javascript:answer.add()">
+<form id="answer" class="umar rel" action="/api/answer/add">
 	<textarea id="answerta" name="answer"></textarea>
 	<div id="answertips" class="pad abs">
 		<h3>Thanks for answering!</h3>
 		<p>While answering, make sure to:</p>
 		<ul>
-			<li><strong>Answer the question</strong>: figure out specifically what the asker wants to know and address that.</li>
-			<li><strong>Cite your sources</strong>: linking to reputable sources can help readers find what they need easier and makes your answer sound informed and accurate.</li>
-			<li><strong>Explain thuroly</strong>: providing a good explanation can help readers grasp the concept you're writing about – remember that they don't necessarily know as much about the technology as you.</li>
+			<li><strong>Answer the question asked</strong>: figure out what the asker specifically wants to know and address that directly.</li>
+			<li><strong>Cite your sources</strong>: back up your statements by citing a reputable source so readers can find relevant material and know that your content is <em>verifiable</em>.</li>
+			<li><strong>Explain theroly</strong>: providing a good explanation so readers can easily grasp the concepts you're writing about – remember that they don't necessarily know as much about the technology as you.</li>
 		</ul>
-		<p>Make sure you <em>don't</em>:</p>
+		<p>Make sure you <em>don't:</em></p>
 		<ul>
-			<li><strong>Post only a link</strong>: links might break, so a link-only answer could become useless in time. Instead, quote or paraphrase relevant material from it and add your own ideas.</li>
-			<li><strong>Add your opinion</strong>: present the facts and let the reader make up their own opinion.</li>
-			<li><strong>Post a comment as an answer</strong>: answers should directly address the question – if you have the same problem or just want to express your thanks, vote up.</li>
+			<li><strong>Post only a link</strong>: external links might break, so a link-only answer could become useless in time. A link is ok as long as the relevant material is complained completly in the answer; you should quote or paraphrase relevant material from your source and add your own ideas and explanation.</li>
+			<li><strong>Only show your opinion</strong>: present the facts and let the reader make up their own opinion. Explain why you use your particular solution, but avoid snark or overly broad opinion statements.</li>
+			<li><strong>Post a comment as an answer</strong>: answers should directly address the question – if you have the same problem or just want to express your thanks, vote up the question.</li>
 		</ul>
 	</div>
 	<button>Submit</button>
-</form> -->
+</form>
 <style>
 	.q-editing h1 { border-bottom: none }
 	#q-content { margin-left: 32px }
@@ -77,6 +73,10 @@ This text will be replaced
 		width: 100%;
 		max-height: 70vmin;
 		min-height: 200px;
+	}
+	#title-edit {
+		font-size: 0.8em;
+		width: 100%;
 	}
 	#comments { margin: 8px 0 }
 	code.blk:empty { display: none }
