--- a/html/formatting.html
+++ b/html/formatting.html
@@ -70,8 +70,8 @@
 	<li>
 		<h4 id="images" class="title">Images <a class="grey" href="#images">#</a></h4>
 		<p>Embedded mages have similar syntax as links, just with an <code>!</code>. Alt text is shown when images are disabled or otherwise unavailable.</p>
-		<code class="blk">![Alt text](http://devdoodle.net/a/logo1square.png)</code>
-		<blockquote><img src="http://devdoodle.net/a/logo1square.png" alt="Alt text" width="100" /></blockquote>
+		<code class="blk">![Alt text](https://devdoodle.net/a/logo1square.png)</code>
+		<blockquote><img src="https://devdoodle.net/a/logo1square.png" alt="Alt text" width="100" /></blockquote>
 	</li>
 	<li>
 		<h4 id="abbrs" class="title">Abbreviations <a class="grey" href="#abbrs">#</a></h4>
