--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -74,7 +74,7 @@ $textarea
 		editing = true;
 		var msg = this.parentNode.parentNode;
 		msg.classList.add('editing');
-		cont.scrollTop = cont.scrollHeight - cont.offsetHeight + document.getElementById(msg.id).getBoundingClientRect().top - cont.getBoundingClientRect().top;
+		msg.scrollIntoView(true);
 		ta.focus();
 		ta.value = source[msg.id];
 		ta.selectionStart = ta.selectionEnd = ta.value.length;
@@ -158,7 +158,7 @@ $textarea
 			console.log(err);
 			return alert('JSON Error. Response was: ' + e.data);
 		}
-		if (tsMode &amp;&amp; ['star', 'unstar'].indexOf(data.event) == -1) return; 
+		if (tsMode &amp;&amp; ['star', 'unstar'].indexOf(data.event) == -1) return;
 		if (data.event == 'init' || data.event == 'add') {
 			source[data.id] = data.body;
 			if (document.getElementById(data.id)) return;
@@ -168,7 +168,7 @@ $textarea
 			div.classList.add('comment');
 			if (data.deleted) div.classList.add('deleted');
 			div.innerHTML = (username ? markdown(data.body + ' ').replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body)).replaceAll('&lt;a', '&lt;a target="_blank"');
-			if (data.event == 'init' &amp;&amp; document.getElementById('ts').hidden) {
+			if (lock &amp;&amp; data.event == 'init' &amp;&amp; document.getElementById('ts').hidden) {
 				var imgs = div.getElementsByTagName('img'),
 					i = imgs.length;
 				while (i--) imgs[i].onload = function() {
