Fix program title edit input width

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -57,6 +57,10 @@
 	#ta-cont, #output { width: 95% }
 	#main { height: 500px }
 	#row { height: calc(100% - 2rem - 2px) }
+	#edit-title {
+		width: 400px;
+		max-width: 100%;
+	}
 	#ta-cont {
 		margin-bottom: 8px;
 		position: relative;
