--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -60,6 +60,10 @@
 		margin: 4px 0;
 	}
 	#main textarea:first-child { margin-top: 0 }
+	#edit-title {
+		width: 400px;
+		max-width: 100%;
+	}
 	.half { max-width: 90vw }
 	#main textarea, #output {
 		max-width: 100%;
