--- a/html/learn/web/web.html
+++ b/html/learn/web/web.html
@@ -11,7 +11,7 @@
 				<line class="cline" />
 				<div class="course">
 					<a href="basic-tags/">Basic elements</a>
-					<div class="description">Get to know the fundamental parts of HTML: links, paragraphs, and images, and emphasize.</div>
+					<div class="description">Get to the basic HTML elements: paragraphs, headings, links, and images.</div>
 				</div>
 				<line class="cline" />
 				<div class="course">
