closes DevDoodle/DevDoodle-Public#5

--- a/html/about.html
+++ b/html/about.html
@@ -25,7 +25,7 @@
 			<p>Programs that primarily serve a non-programming related purpose will be removed.</p>
 			<h3>Editing</h3>
 			<p>Questions and answers can be edited by the community to correct mistakes. We encourage editing whenever you see a fixable problem with a post.</p>
-			<p>Tho programs can't be directly edited, they can be forked to add functionality. Forking a program creates an editable clone of it owned by the forker.</p>
+			<p>The programs can't be directly edited, they can be forked to add functionality. Forking a program creates an editable clone of it owned by the forker.</p>
 		</div>
 	</div>
 	<div class="half">
