Improve course linkages

--- a/html/learn/web/html-intro/5.html
+++ b/html/learn/web/html-intro/5.html
@@ -16,7 +16,7 @@ Intro to HTML Recap
 				<button id="check" type="submit">Move on</button>
 			</form>
 		</div>
-		<div id="cntrls"><a href="../4/" class="lft">Back</a></div>
+		<div id="cntrls"><a href="../4/" class="lft">Back</a> <a href="../../basic-tags/" class="rit">Next ❯</a></div>
 	</div>
 	<textarea id="html">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
