Fix #216 connection errors

--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -717,19 +717,5 @@ $textarea
 		margin: 0 2px;
 	}
 	.comment > :first-child { margin: 0 }
-	.connection-error {
-		position: absolute;
-		z-index: 1;
-		margin-top: 4px;
-		background: red;
-		color: #fff;
-		font-size: 1.5em;
-		padding: 2px 8px;
-		box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-		animation: fadein .5s;
-		-webkit-animation: fadein .5s;
-	}
-	.connection-error a { color: #ffb }
-	.connection-error a:hover { color: #ffd }
-	.connection-error a:active { color: #fda }
+	.connection-error { position: absolute }
 </style>
