Show num results at /user/

--- a/html/user/userlist.html
+++ b/html/user/userlist.html
@@ -21,6 +21,7 @@
 <style>
 	.user, .user:first-child { margin-top: 6px }
 </style>
+<h2>$num</h2>
 <div class="umar clearfix">
 	$users</div>
 <script>
