Many style tweaks

--- a/html/home.html
+++ b/html/home.html
@@ -27,4 +27,4 @@
 </svg>
 <hr />
 <p class="hglt pad">DevDoodle is a developer network where you can <a href="learn/">learn languages</a>, <a href="dev/">create and share</a> your own programs, and <a href="qa/">ask and answer questions</a>! We're a bit different from other sites - you can visit our <a href="about">about us</a> page to learn more.</p>
-<p style="margin-top: 12px"><strong>Note:</strong> This site is in beta, so some features might not work correctly or have not been implemented. Issues can be reported on <a href="https://github.com/DevDoodle/DevDoodle-Public">our public github page</a>.</p>
+<p class="bumar"><strong>Note:</strong> This site is in beta, so some features might not work correctly or have not been implemented. Issues can be reported on <a href="https://github.com/DevDoodle/DevDoodle-Public">our public github page</a>.</p>
