--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -193,7 +193,11 @@ $textarea
 			permalink.appendChild(agot(data.time));
 			permalink.href = '#' + (div.id = data.id);
 			sig.appendChild(permalink);
-			div.appendChild(sig);
+			var currentNode = div;
+			while (!sig.parentNode) {
+				if (currentNode.lastChild.firstChild.nodeValue) currentNode.lastChild.appendChild(sig);
+				else currentNode = currentNode.lastChild;
+			}
 			var tCtrls = ctrls.cloneNode(true);
 			tCtrls.children[0].onclick = ctrlsStar.onclick;
 			tCtrls.children[1].onclick = ctrlsLink.onclick;
@@ -716,6 +720,5 @@ $textarea
 		padding: 2px;
 		margin: 0 2px;
 	}
-	.comment > :first-child { margin: 0 }
 	.connection-error { position: absolute }
 </style>
