Login improvements, fix #204 and #207

--- a/html/user/mailform.html
+++ b/html/user/mailform.html
@@ -1,6 +1,6 @@
 <form id="mailform">
 	<span id="mail">Mail: $mail</span>
-	<input type="text" id="mailinput" hidden="" value="$mail" placeholder="Mail" class="max-width" style="width: 240px" />
+	<input type="text" id="mailinput" hidden="" value="$mail" maxlength="256" placeholder="Mail" class="max-width" style="width: 240px" />
 	<button type="submit" id="mailsave" hidden="">Save</button>
 	<button type="reset" id="mailcancel" hidden="">Cancel</button>
 	<button type="button" id="mailedit">edit</button>
